--- a/bvilane_resume_site_assignment.html
+++ b/bvilane_resume_site_assignment.html
@@ -1,23 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Resume</title>
+  <title>Bavukile Vilane - Resume</title>
   <link rel="stylesheet" href="styles.css">
   <script src="script.js"></script>
 </head>
 <body>
   <header>
-    <!-- Navigation -->
+    <h1>Bavukile Vilane</h1>
+    <h2>Software Engineering Student</h2>
+    <p>Bio: As a driven software engineering student, I'm passionate about leveraging technology to drive positive change. With a strong problem-solving mindset, I constantly seek innovative solutions to complex challenges. Beyond coding, I'm drawn to business and entrepreneurship, aiming to build transformative platforms. Inspired by visionaries like Steve Jobs, I believe in the power of daring to make a difference. I hope that together we can shape the future through technology, innovation, and strategic thinking. I am committed to pursuing projects and initiatives that have the potential to transform industries and improve lives.</p>
   </header>
   <main>
-    <!-- Resume Sections -->
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Phone: +27 63 523 7168 / +250 792 525 579</p>
+      <p>School Email: b.vilane@alustudent.com</p>
+      <p>Personal Email: bavukile@outlook.com</p>
+      <p>Location: Kigali, Rwanda and South Africa</p>
+    </section>
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Interpersonal Skills</li>
+        <li>Ability to Work Independently</li>
+        <li>Analytical Thinking / Problem-Solving</li>
+        <li>Project Management</li>
+        <li>Strong Communication</li>
+        <li>Leadership Skills</li>
+        <li>Time Management</li>
+        <li>Photography & Videography</li>
+      </ul>
+    </section>
+    <section id="education">
+      <h2>Education</h2>
+      <p>BSc in Software Engineering</p>
+      <p>African Leadership University, Kigali</p>
+      <p>2023 - 2026</p>
+      <p>Founded ALU Pan-Africanists Society, acting Head of Operations for the Society</p>
+    </section>
   </main>
   <footer>
-    <!-- Contact Information -->
+    <p>Thank you for visiting my website! Please don't hesitate to get in touch if you have any questions or would like to work together.</p>
   </footer>
-  <script src="script.js"></script>
 </body>
 </html>
-
