--- a/bvilane_resume_site_assignment.html
+++ b/bvilane_resume_site_assignment.html
@@ -9,9 +9,18 @@
 </head>
 <body>
   <header>
+    <nav>
+      <ul>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
+    </nav>    
     <h1>Bavukile Vilane</h1>
     <h2>Software Engineering Student</h2>
     <p>Bio: As a driven software engineering student, I'm passionate about leveraging technology to drive positive change. With a strong problem-solving mindset, I constantly seek innovative solutions to complex challenges. Beyond coding, I'm drawn to business and entrepreneurship, aiming to build transformative platforms. Inspired by visionaries like Steve Jobs, I believe in the power of daring to make a difference. I hope that together we can shape the future through technology, innovation, and strategic thinking. I am committed to pursuing projects and initiatives that have the potential to transform industries and improve lives.</p>
+
   </header>
   <main>
     <section id="contact">
